--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "workspace",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npx vite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,11 +13,15 @@
   "description": "",
   "dependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "svelte": "^5.23.2",
+    "svelte-spa-router": "^4.0.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.15",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "svelte": "^5.23.2",
-    "svelte-spa-router": "^4.0.1",
-    "tailwindcss": "^4.0.14",
+    "svelte-preprocess": "^6.0.3",
+    "tailwindcss": "^4.0.15",
     "vite": "^6.2.2"
   }
 }
